syntax = "proto3";

package arise;

option go_package=".;proto";

message SenderRequest {
  string name = 1;
  string hash = 2;
}

message RecieverRequest {
  string code = 1;
}

message SenderInfo {
  string ip = 1;
}

message RecieverInfo {
  string ip = 1;
}

message SenderResponse {
  string code = 1;
}

message RecieverResponse {
  string name =1;
  string hash =2;
}

message SendResponse {
  string text = 1;
}

message Code {
  string code = 1;
}
message Empty {

}

message Chunk {
  bytes content = 1;
  string code = 2;
}

message RecieveResponse {
  bytes content = 1;
}

message PublicKey {
  bytes key = 1;
  string code = 2;
}

message PublicKeyResponse {
  string message = 1;
}

message EncryptionKey {
  bytes key = 1;
  string code = 2;
}

message EncryptionKeyResponse {
  string message = 1;
}

service Arise {
  rpc Sender(SenderRequest) returns (SenderResponse);
  rpc Reciever(RecieverRequest) returns (RecieverResponse);
  rpc DataSend(stream Chunk) returns (SendResponse);
  rpc DataRecieve(RecieverRequest) returns (stream RecieveResponse);
  rpc GetRecieverInfo(Code) returns (RecieverInfo);
  rpc GetSenderInfo(Code) returns (SenderInfo);
  rpc GetPublicKey(Code) returns (PublicKey);
  rpc SharePublicKey(PublicKey) returns (PublicKeyResponse);
  rpc GetEncryptionKey(Code) returns (EncryptionKey);
  rpc ShareEncryptionKey(EncryptionKey) returns (EncryptionKeyResponse);
}
